log/build_2024-03-04_10-13-04/my_first_publisher/stderr.log
  File "/home/vboxuser/turtlebot3_ws/install/my_first_publisher/lib/python3.8/site-packages/my_first_publisher/simple_publisher.py", line 27
    if(!parado):
       ^
SyntaxError: invalid syntax

